--- a/final project 3/index.html
+++ b/final project 3/index.html
@@ -7,7 +7,41 @@
 </head>
 <body>
 	<main>
+     <div class="header">
+        <nav class="top-nav-left">
+          <ul>
+            <li class="top-nav-left__item">
+              <a href="">
+                <i class="far fa-plus-square icon"></i>Actions
+                <i class="fas fa-angle-down"></i>
+              </a>
+            </li>
+            <li class="top-nav-left__item">
+              <a href=""><i class="fas fa-chart-line icon"></i>Reports
+                <i class="fas fa-angle-down"></i>
+              </a>
+            </li>
+            <li class="top-nav-left__item">
+              <a href=""><i class="fas fa-paper-plane icon"></i>Apps
+                <button class="new-btn">new</button>
+                <i class="fas fa-angle-down"></i>
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <nav class="top-nav-right">
+          <ul>
+            <li class="top-nav-right__item" ><i class="fas fa-search"></i></li>
+            <li class="top-nav-right__item" ><i class="far fa-bell"></i></li>
+            <li class="top-nav-right__item"><i class="fas fa-recycle"></i></li>
+            <li class="top-nav-right__item"><img class="flag-icon" src="assets/media/us.jpg"></li>
+            <li class="top-nav-right__item"><img class="user-img" src="assets/media/user.jpg"></li>
+            <li class="top-nav-right__item"><i class="fas fa-align-justify"></i></li>
+          </ul>
+        </nav>
+      </div>
 		<section class="container">
+
       <div class="sub_header">
         <h3 class="sub_header_title">Dashboard</h3>
         <nav class="sub_header__daterange">
