main section in process

--- a/final project 3/index.html
+++ b/final project 3/index.html
@@ -18,8 +18,10 @@
         </nav>
       </div>  
     </section>
+
+    <!-- Section First -->
     <section class="container">
-      <div class="grid col-1-3">
+      <div class="grid1 col-1-1-1">
         <!-- start trends box area -->
         <div class="trends box">
           <div class="trends_header">
@@ -56,13 +58,174 @@
         </div>
         <!-- end trends -->
         <!-- start activity box area -->
-        <div class="box"></div>
+        <div class="box">
+          <div>
+            <div class="activity-chart"></div>
+          </div>
+          <div>
+            <i class="fas fa-truck"></i>
+            <p>Delivered</p>
+            <span>15 New</span>
+            <p>Paskages</p>
+          </div>
+          <div>
+            <i class="fas fa-chart-pie"></i>
+            <p>Ordered</p>
+            <span>72 New items</span>
+          </div>
+          <div>
+            <i class="far fa-paper-plane"></i>
+            <p>Reporeted</p>
+            <span>72 Support</span>
+            <p>Cases</p>
+          </div>
+          <div>
+            <i class="fas fa-clock"></i>
+            <p>Arrived</p>
+            <span>34 Upgraded</span>
+            <p>Boxes</p>
+          </div>
+        </div>
         <!-- end activity -->
         <!-- start blog box area -->
-        <div class="box"></div>
+        <div class="box blog">
+          <div class="blog-img-area">
+            <img src="assets/media/blog1.jpg" class="blog-img">
+          </div>
+          <p><span class="blog-nav">Blog</span></p>
+          <p class="blog-title">Introducing New Feature</p>
+          <div class="blog-disc">
+            <div>
+              <img src="" alt="Anna Krox">
+              <p>
+                <span>Anna Krox</span>
+                <p>UX/Ui Designer, Google</p>
+              </p>
+              <span>
+                <span>18</span>
+                <span>Comments</span>
+              </span>
+            </div>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry scrambled
+               it to make text of the printing and typesetting industry scrambled a type specimen 
+              book text of the dummy text of the printing printing and typesetting industry 
+              scrambled dummy text of the printing. 
+            </p>
+            <button>Read More</button>
+          </div>
+        </div>
         <!-- end blog -->
       </div>
     </section>
-	</main>
+
+    <!-- Second Section -->
+    <section class="container">
+      <div class="grid2 col-1-1-1">
+        <!-- start profit-amount box area -->
+        <div class="box">
+          <div class="widget">
+            <p class="widget_info">
+              <p class="widget_title">Member Profit</p>
+              <p class="widget_sub_info">Awerage weekly profit</p>
+              <p>Profit</p>
+            </p>
+            <p class="widget_number">+$17,800</p>
+          </div>
+          <div class="widget">
+            <p class="widget_info">
+              <p class="widget_title">Orders</p>
+              <p class="widget_sub_info">Weekly Customer</p>
+              <p>Orders</p>
+            </p>
+            <p class="widget_number">+1,800</p>
+          </div>
+          <div class="widget">
+            <p class="widget_info">
+              <p class="widget_title">Issue Reports</p>
+              <p class="widget_sub_info">System Bugs and</p>
+              <p>issues</p>
+            </p>
+            <p class="widget_number">-27,49%</p>
+          </div>
+        </div>
+        <!-- start daily-sale box area -->
+        <div class="box">
+          <p>Daily Sales</p>
+          <p>Check out each collumn for more details</p>
+          <img src="assets/media/daily-sale-chart.png">
+        </div>
+        <!-- start profit-share box area -->
+        <div class="box">
+          <p>Profit Share</p>
+          <p>Profit Share between customers</p>
+          <div>
+            <img src="assets/media/profit-share-chart.png">
+            <div>
+              <p>
+                <span></span>
+                <span>37% Sport Tickets</span>
+              </p>
+              <p>
+                <span></span>
+                <span>47% Business</span>
+                <span>Events</span>
+              </p>
+              <p>
+                <span></span>
+                <span>19% Others</span>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container">
+      <div class="grid1 col-1-1-1">
+        <!-- start personal income box area -->
+        <div class="box">
+          <div class="personal-income-hero">
+            <p>
+              <span>Personal Income</span>
+              <button>
+                <span>2018</span>
+                <span><i class="fas fa-angle-down"></i></span>
+              </button>
+            </p>
+            <p>$256,100</p>
+          </div>
+          <button>Inclusive All Earnings</button>
+          <div>
+            <ul>
+              <li>Quater 1</li>
+              <li>Quater 2</li>
+              <li>Quater 3</li>
+              <li>Quater 4</li>
+            </ul>
+          </div>
+          <div>
+            <p>
+              <img src="assets/media/profit-share-chart.png">
+            </p>
+            <p>
+              <p><span></span><span>37% Case</span></p>
+              <p><span></span><span>42% Events</span></p>
+              <p><span></span><span>19% Others</span></p>
+            </p>
+          </div>
+        </div>
+
+        <!-- start Finance states box area -->
+        <div class="box">
+          <div class="finance-state-hero"></div>
+        </div>
+
+        <!-- start packages box area -->
+        <div class="box packages"></div>
+
+      </div>
+    </section>
+  </main>
+  <script src="assets/main.js"></script>
 </body>
 </html>
