Recent Notifications created

--- a/final project 3/index.html
+++ b/final project 3/index.html
@@ -63,6 +63,57 @@
         <!-- end blog -->
       </div>
     </section>
+        <!-- recent notifacation -->
+   <section class="recent-notifacation">
+      <div class="recent-head">
+        <div class="recent_heading">
+          <p class="title">Recent Notifacation</p>
+        </div>
+        <div class="recent_heading_tools">
+          <ul class="navigation">
+            <li class="nav_item"> <a href="#"><button>Today</button></a> </li>
+            <li class="nav_item"> <a href="#"> Month </a> </li>
+          </ul>
+        </div>
+      </div><hr>
+      <div class="list_items">
+        <span class="time">09:00</span>
+        <div class="author__info"><span>
+          <p class="detail">Lorem ipsum dolor sit amit,consectetur eiusmdd tempor </p>
+          <span class="author"><a href="#" class="author__name">By Bob</a></span>
+        </div></span>
+        <span class="time time1">10:00</span>
+        <div class="author__info">
+          <p class="detail">Lorem ipsum dolor sit amit </p>
+          <span class="author"><a href="#" class="author__name">By Sean</a></span>
+        </div>
+         <span class="time time2">11:00</span>
+        <div class="author__info">
+          <p class="detail">Lorem ipsum dolor sit amit eiusmdd tempor  </p>
+          <span class="author"><a href="#" class="author__name">By James</a></span>
+        </div>
+         <span class="time time3">12:00</span>
+        <div class="author__info">
+          <p class="detail">Lorem ipsum dolor </p>
+          <span class="author"><a href="#" class="author__name">By James</a></span>
+        </div>
+         <span class="time time4">14:00</span>
+        <div class="author__info">
+          <p class="detail">Lorem ipsum dolor sit amit,consectetur eiusmdd  </p>
+          <span class="author"><a href="#" class="author__name">By Derrick</a></span>
+        </div>
+         <span class="time time5">15:00</span>
+        <div class="author__info">
+          <p class="detail">Lorem ipsum dolor sit amit,consectetur  </p>
+          <span class="author"><a href="#" class="author__name">By Iman</a></span>
+        </div>
+         <span class="time time6">16:00</span>
+        <div class="author__info">
+          <p class="detail">Lorem ipsum dolor sit consectetur eiusmdd tempor  </p>
+          <span class="author"><a href="#" class="author__name">By Aziko</a></span>
+        </div>
+      </div>
+    </section>
 	</main>
 </body>
 </html>
