--- a/final project 3/index.html
+++ b/final project 3/index.html
@@ -14,193 +14,137 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   
   <nav class="nav-side">
-      <ul class="main__list">
-        <h1 class="nav-heading">METRONIC</h1>
-        <div class="lines">
-          <div class="line line-1"></div>
-          <div class="line line-2"></div>
-          <div class="line line-3"></div>
-        </div>
-      </ul>
-      <ul class="list--1">
-        <li><a href="" class="dash"><i class="fas fa-chart-line"></i> Dashboard</a></li>
-      </ul>
-      <ul class="list--2">
-         <li><h5 class="list--heading">COMPONENTS</h5></li>
-         <li class="side-list_items"><a href=""><i class="fas fa-layer-group"></i> Base</a>
-           <ul class="list_sub list_sub-1">
-           <li class="side-list_items-sub"><a href="">State Colors</a></li>
-           <li class="side-list_items-sub"><a href="">Typography</a></li>
-           <li class="side-list_items-sub"><a href="">Stack</a></li>
-           <li class="side-list_items-sub"><a href="">Tables</a></li>
-           <li class="side-list_items-sub"><a href="">Progress</a></li>
-           </ul>
-        </li>
-         <li class="side-list_items"><a href=""><i class="fas fa-project-diagram"></i> Icons</a>
-           <ul class="list_sub list_sub-2">
-           <li class="side-list_items-sub"><a href="">State Colors</a></li>
-           <li class="side-list_items-sub"><a href="">Typography</a></li>
-           <li class="side-list_items-sub"><a href="">Stack</a></li>
-           <li class="side-list_items-sub"><a href="">Tables</a></li>
-           <li class="side-list_items-sub"><a href="">Progress</a></li>
-           </ul>
-        </li>
-         <li class="side-list_items"><a href=""><i class="fas fa-toggle-on"></i> Buttons</a>
-           <ul class="list_sub list_sub-2">
-           <li class="side-list_items-sub"><a href="">State Colors</a></li>
-           <li class="side-list_items-sub"><a href="">Typography</a></li>
-           <li class="side-list_items-sub"><a href="">Stack</a></li>
-           <li class="side-list_items-sub"><a href="">Tables</a></li>
-           <li class="side-list_items-sub"><a href="">Progress</a></li>
-           </ul>
-        </li>
-         <li class="side-list_items"><a href=""><i class="fas fa-file-import"></i> Portlets</a>
-           <ul class="list_sub list_sub-2">
-           <li class="side-list_items-sub"><a href="">State Colors</a></li>
-           <li class="side-list_items-sub"><a href="">Typography</a></li>
-           <li class="side-list_items-sub"><a href="">Stack</a></li>
-           <li class="side-list_items-sub"><a href="">Tables</a></li>
-           <li class="side-list_items-sub"><a href="">Progress</a></li>
-           </ul>
-        </li>
-         <li class="side-list_items"><a href=""><i class="fas fa-sliders-h"></i> Timeline</a>
-           <ul class="list_sub list_sub-2">
-           <li class="side-list_items-sub"><a href="">State Colors</a></li>
-           <li class="side-list_items-sub"><a href="">Typography</a></li>
-           <li class="side-list_items-sub"><a href="">Stack</a></li>
-           <li class="side-list_items-sub"><a href="">Tables</a></li>
-           <li class="side-list_items-sub"><a href="">Progress</a></li>
-           </ul>
-        </li>
-         <li class="side-list_items"><a href=""><i class="fas fa-users"></i> Widgets</a>
-           <ul class="list_sub list_sub-2">
-           <li class="side-list_items-sub"><a href="">State Colors</a></li>
-           <li class="side-list_items-sub"><a href="">Typography</a></li>
-           <li class="side-list_items-sub"><a href="">Stack</a></li>
-           <li class="side-list_items-sub"><a href="">Tables</a></li>
-           <li class="side-list_items-sub"><a href="">Progress</a></li>
-           </ul>
-        </li>
-         <li class="side-list_items"><a href=""><i class="fas fa-calendar-alt"></i> Calenders</a>
-           <ul class="list_sub list_sub-2">
-           <li class="side-list_items-sub"><a href="">State Colors</a></li>
-           <li class="side-list_items-sub"><a href="">Typography</a></li>
-           <li class="side-list_items-sub"><a href="">Stack</a></li>
-           <li class="side-list_items-sub"><a href="">Tables</a></li>
-           <li class="side-list_items-sub"><a href="">Progress</a></li>
-           </ul>
-        </li>
-         <li class="side-list_items"><a href=""><i class="fas fa-chart-bar"></i> Charts</a>
-           <ul class="list_sub list_sub-2">
-           <li class="side-list_items-sub"><a href="">State Colors</a></li>
-           <li class="side-list_items-sub"><a href="">Typography</a></li>
-           <li class="side-list_items-sub"><a href="">Stack</a></li>
-           <li class="side-list_items-sub"><a href="">Tables</a></li>
-           <li class="side-list_items-sub"><a href="">Progress</a></li>
-           </ul>
-        </li>
-         <li class="side-list_items"><a href=""><i class="fas fa-map-marked-alt"></i> Maps</a>
-           <ul class="list_sub list_sub-2">
-           <li class="side-list_items-sub"><a href="">State Colors</a></li>
-           <li class="side-list_items-sub"><a href="">Typography</a></li>
-           <li class="side-list_items-sub"><a href="">Stack</a></li>
-           <li class="side-list_items-sub"><a href="">Tables</a></li>
-           <li class="side-list_items-sub"><a href="">Progress</a></li>
-           </ul>
-        </li>
-         <li class="side-list_items"><a href=""><i class="fas fa-exclamation-triangle"></i> Utils</a>
-           <ul class="list_sub list_sub-2">
-           <li class="side-list_items-sub"><a href="">State Colors</a></li>
-           <li class="side-list_items-sub"><a href="">Typography</a></li>
-           <li class="side-list_items-sub"><a href="">Stack</a></li>
-           <li class="side-list_items-sub"><a href="">Tables</a></li>
-           <li class="side-list_items-sub"><a href="">Progress</a></li>
-           </ul>
-        </li>
-      </ul>
-      <ul class="list--3">
-        <li><h5 class="list--heading">CRUD</h5></li>
-        <li class="side-list_items"><a href=""><i class="fas fa-sliders-h"></i> Froms & Controls</a>
-          <ul class="list_sub list_sub-2">
-           <li class="side-list_items-sub"><a href="">State Colors</a></li>
-           <li class="side-list_items-sub"><a href="">Typography</a></li>
-           <li class="side-list_items-sub"><a href="">Stack</a></li>
-           <li class="side-list_items-sub"><a href="">Tables</a></li>
-           <li class="side-list_items-sub"><a href="">Progress</a></li>
-           </ul>
-        </li>
-        <li class="side-list_items"><a href=""><i class="fas fa-magic"></i> Metronic Wizard</a>
-          <ul class="list_sub list_sub-2">
-           <li class="side-list_items-sub"><a href="">State Colors</a></li>
-           <li class="side-list_items-sub"><a href="">Typography</a></li>
-           <li class="side-list_items-sub"><a href="">Stack</a></li>
-           <li class="side-list_items-sub"><a href="">Tables</a></li>
-           <li class="side-list_items-sub"><a href="">Progress</a></li>
-           </ul>
-        </li>
-        <li class="side-list_items"><a href=""><i class="fas fa-database"></i> Metronic Database</a>
-          <ul class="list_sub list_sub-2">
-           <li class="side-list_items-sub"><a href="">State Colors</a></li>
-           <li class="side-list_items-sub"><a href="">Typography</a></li>
-           <li class="side-list_items-sub"><a href="">Stack</a></li>
-           <li class="side-list_items-sub"><a href="">Tables</a></li>
-           <li class="side-list_items-sub"><a href="">Progress</a></li>
-           </ul>
-        </li>
-        <li class="side-list_items"><a href=""><i class="fas fa-table"></i> DataTables</a>
-          <ul class="list_sub list_sub-2">
-           <li class="side-list_items-sub"><a href="">State Colors</a></li>
-           <li class="side-list_items-sub"><a href="">Typography</a></li>
-           <li class="side-list_items-sub"><a href="">Stack</a></li>
-           <li class="side-list_items-sub"><a href="">Tables</a></li>
-           <li class="side-list_items-sub"><a href="">Progress</a></li>
-           </ul>
-        </li>
-      </ul>
-      <ul class="list--4">
-        <li><h5 class="list--heading">Tools</h5></li>
-        <li class="side-list_items"><a href=""><i class="fas fa-cog"></i> Layout Builder</a></li>
-      </ul>
-      <ul class="list--5">
-        <li><h5 class="list--heading">Snipets</h5></li>
-        <li class="side-list_items"><a href=""><i class="fas fa-tag"></i> Pricing Tables</a>
-          <ul class="list_sub list_sub-2">
-           <li class="side-list_items-sub"><a href="">State Colors</a></li>
-           <li class="side-list_items-sub"><a href="">Typography</a></li>
-           <li class="side-list_items-sub"><a href="">Stack</a></li>
-           <li class="side-list_items-sub"><a href="">Tables</a></li>
-           <li class="side-list_items-sub"><a href="">Progress</a></li>
-           </ul>
-        </li>
-        <li class="side-list_items"><a href=""><i class="fas fa-file-invoice"></i> Invoice</a>
-          <ul class="list_sub list_sub-2">
-           <li class="side-list_items-sub"><a href="">State Colors</a></li>
-           <li class="side-list_items-sub"><a href="">Typography</a></li>
-           <li class="side-list_items-sub"><a href="">Stack</a></li>
-           <li class="side-list_items-sub"><a href="">Tables</a></li>
-           <li class="side-list_items-sub"><a href="">Progress</a></li>
-           </ul>
-        </li>
-        <li class="side-list_items"><a href=""><i class="far fa-question-circle"></i> FAQs</a>
-          <ul class="list_sub list_sub-2">
-           <li class="side-list_items-sub"><a href="">State Colors</a></li>
-           <li class="side-list_items-sub"><a href="">Typography</a></li>
-           <li class="side-list_items-sub"><a href="">Stack</a></li>
-           <li class="side-list_items-sub"><a href="">Tables</a></li>
-           <li class="side-list_items-sub"><a href="">Progress</a></li>
-           </ul>
-        </li>
-        <li class="side-list_items"><a href=""><i class="fas fa-file"></i> Custom Pages</a>
-          <ul class="list_sub list_sub-2">
-           <li class="side-list_items-sub"><a href="">State Colors</a></li>
-           <li class="side-list_items-sub"><a href="">Typography</a></li>
-           <li class="side-list_items-sub"><a href="">Stack</a></li>
-           <li class="side-list_items-sub"><a href="">Tables</a></li>
-           <li class="side-list_items-sub"><a href="">Progress</a></li>
-           </ul>
-        </li>
-      </ul>
-    </nav>
+  <ul class="main__list">
+    <h1 class="nav-heading">METRONIC</h1>
+    <div class="lines">
+      <div class="line line-1"></div>
+      <div class="line line-2"></div>
+      <div class="line line-3"></div>
+    </div>
+  </ul>
+  <ul class="list--1">
+    <li><a href="" class="dash anchor"><i class="fas fa-chart-line"></i> Dashboard</a></li>
+  </ul>
+  <ul class="list--2">
+     <li><h5 class="list--heading">COMPONENTS</h5></li>
+     <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-layer-group"></i> Base</a>
+       <ul class="list_sub list_sub-1">
+       <li class="side-list_items-sub"><a href="" class="anchor">State Colors</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Typography</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Stack</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Tables</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Progress</a></li>
+       </ul>
+    </li>
+     <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-project-diagram"></i> Icons</a>
+       <ul class="list_sub list_sub-2">
+       <li class="side-list_items-sub"><a href="" class="anchor">State Colors</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Typography</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Stack</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Tables</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Progress</a></li>
+       </ul>
+    </li>
+     <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-toggle-on"></i> Buttons</a>
+       <ul class="list_sub list_sub-2">
+       <li class="side-list_items-sub"><a href="" class="anchor">State Colors</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Typography</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Stack</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Tables</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Progress</a></li>
+       </ul>
+    </li>
+     <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-file-import"></i> Portlets</a>
+       <ul class="list_sub list_sub-2">
+       <li class="side-list_items-sub"><a href="" class="anchor">State Colors</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Typography</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Stack</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Tables</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Progress</a></li>
+       </ul>
+    </li>
+     <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-sliders-h"></i> Timeline</a>
+       <ul class="list_sub list_sub-2">
+       <li class="side-list_items-sub"><a href="" class="anchor">State Colors</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Typography</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Stack</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Tables</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Progress</a></li>
+       </ul>
+    </li>
+     <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-users"></i> Widgets</a>
+       <ul class="list_sub list_sub-2">
+       <li class="side-list_items-sub"><a href="" class="anchor">State Colors</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Typography</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Stack</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Tables</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Progress</a></li>
+       </ul>
+    </li>
+     <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-calendar-alt"></i> Calenders</a>
+       <ul class="list_sub list_sub-2">
+       <li class="side-list_items-sub"><a href="" class="anchor">State Colors</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Typography</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Stack</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Tables</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Progress</a></li>
+       </ul>
+    </li>
+     <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-chart-bar"></i> Charts</a>
+       <ul class="list_sub list_sub-2">
+       <li class="side-list_items-sub"><a href="" class="anchor">State Colors</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Typography</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Stack</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Tables</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Progress</a></li>
+       </ul>
+    </li>
+     <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-map-marked-alt"></i> Maps</a>
+       <ul class="list_sub list_sub-2">
+       <li class="side-list_items-sub"><a href="">State Colors</a></li>
+       <li class="side-list_items-sub"><a href="">Typography</a></li>
+       <li class="side-list_items-sub"><a href="">Stack</a></li>
+       <li class="side-list_items-sub"><a href="">Tables</a></li>
+       <li class="side-list_items-sub"><a href="">Progress</a></li>
+       </ul>
+    </li>
+     <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-exclamation-triangle"></i> Utils</a>
+       <ul class="list_sub list_sub-2">
+       <li class="side-list_items-sub"><a href="">State Colors</a></li>
+       <li class="side-list_items-sub"><a href="">Typography</a></li>
+       <li class="side-list_items-sub"><a href="">Stack</a></li>
+       <li class="side-list_items-sub"><a href="">Tables</a></li>
+       <li class="side-list_items-sub"><a href="">Progress</a></li>
+       </ul>
+    </li>
+  </ul>
+  <ul class="list--3">
+    <li><h5 class="list--heading">CRUD</h5></li>
+    <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-sliders-h"></i> Froms & Controls</a>
+      <ul class="list_sub list_sub-2">
+       <li class="side-list_items-sub"><a href="" class="anchor">State Colors</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Typography</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Stack</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Tables</a></li>
+       <li class="side-list_items-sub"><a href="" class="anchor">Progress</a></li>
+       </ul>
+    </li>
+    <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-magic"></i> Metronic Wizard</a></li>
+    <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-database"></i> Metronic Database</a></li>
+    <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-table"></i> DataTables</a></li>
+  </ul>
+  <ul class="list--4">
+    <li><h5 class="list--heading">Tools</h5></li>
+    <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-cog"></i> Layout Builder</a></li>
+  </ul>
+  <ul class="list--5">
+    <li><h5 class="list--heading">Snipets</h5></li>
+    <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-tag"></i> Pricing Tables</a></li>
+    <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-file-invoice"></i> Invoice</a></li>
+    <li class="side-list_items"><a href="" class="anchor"><i class="far fa-question-circle"></i> FAQs</a></li>
+    <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-file"></i> Custom Pages</a></li>
+  </ul>
+</nav>
   
 
 	<main class="main">
