side nav changes

--- a/final project 3/index.html
+++ b/final project 3/index.html
@@ -129,20 +129,84 @@
        <li class="side-list_items-sub"><a href="" class="anchor">Progress</a></li>
        </ul>
     </li>
-    <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-magic"></i> Metronic Wizard</a></li>
-    <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-database"></i> Metronic Database</a></li>
-    <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-table"></i> DataTables</a></li>
+    <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-magic"></i> Metronic Wizard</a>
+      <ul class="list_sub list_sub-2">
+          <li class="side-list_items-sub"><a href="" class="anchor">State Colors</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Typography</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Stack</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Tables</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Progress</a></li>
+      </ul>
+    </li>
+    <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-database"></i> Metronic Database</a>
+      <ul class="list_sub list_sub-2">
+          <li class="side-list_items-sub"><a href="" class="anchor">State Colors</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Typography</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Stack</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Tables</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Progress</a></li>
+      </ul>
+    </li>
+    <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-table"></i> DataTables</a>
+      <ul class="list_sub list_sub-2">
+          <li class="side-list_items-sub"><a href="" class="anchor">State Colors</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Typography</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Stack</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Tables</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Progress</a></li>
+      </ul>
+    </li>
   </ul>
   <ul class="list--4">
     <li><h5 class="list--heading">Tools</h5></li>
-    <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-cog"></i> Layout Builder</a></li>
+    <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-cog"></i> Layout Builder</a>
+      <ul class="list_sub list_sub-2">
+          <li class="side-list_items-sub"><a href="" class="anchor">State Colors</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Typography</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Stack</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Tables</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Progress</a></li>
+      </ul>
+    </li>
   </ul>
   <ul class="list--5">
     <li><h5 class="list--heading">Snipets</h5></li>
-    <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-tag"></i> Pricing Tables</a></li>
-    <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-file-invoice"></i> Invoice</a></li>
-    <li class="side-list_items"><a href="" class="anchor"><i class="far fa-question-circle"></i> FAQs</a></li>
-    <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-file"></i> Custom Pages</a></li>
+    <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-tag"></i> Pricing Tables</a>
+      <ul class="list_sub list_sub-2">
+          <li class="side-list_items-sub"><a href="" class="anchor">State Colors</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Typography</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Stack</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Tables</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Progress</a></li>
+      </ul>
+    </li>
+    <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-file-invoice"></i> Invoice</a>
+      <ul class="list_sub list_sub-2">
+          <li class="side-list_items-sub"><a href="" class="anchor">State Colors</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Typography</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Stack</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Tables</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Progress</a></li>
+      </ul>
+    </li>
+    <li class="side-list_items"><a href="" class="anchor"><i class="far fa-question-circle"></i> FAQs</a>
+      <ul class="list_sub list_sub-2">
+          <li class="side-list_items-sub"><a href="" class="anchor">State Colors</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Typography</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Stack</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Tables</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Progress</a></li>
+      </ul>
+    </li>
+    <li class="side-list_items"><a href="" class="anchor"><i class="fas fa-file"></i> Custom Pages</a>
+      <ul class="list_sub list_sub-2">
+          <li class="side-list_items-sub"><a href="" class="anchor">State Colors</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Typography</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Stack</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Tables</a></li>
+          <li class="side-list_items-sub"><a href="" class="anchor">Progress</a></li>
+      </ul>
+    </li>
   </ul>
 </nav>
   
