--- a/final project 3/index.html
+++ b/final project 3/index.html
@@ -363,6 +363,86 @@
         </div>
       </div>
     </section>
+    <!-- Task -->
+    <section class="task">
+      <div class="task-head">
+        <div class="task_heading">
+          <p class="title">Tasks</p>
+        </div>
+        <div class="task_heading_tools">
+          <ul class="navigation">
+            <li class="nav_item"> <a href="#"><button>Today</button></a> </li>
+            <li class="nav_item"> <a href="#"> Week </a> </li>
+            <li class="nav_item"> <a href="#"> Month </a> </li>
+          </ul>
+        </div>
+      </div>
+      <div class="list_items">
+        <span class="time-task"><label class="container">
+        <input type="checkbox" checked="checked">
+        <span class="checkmark"></span>
+        </label>
+        </span>
+        <div class="author__info"><span>
+          <p class="detail">Lorem ipsum dolor sit amit,consectetur              eiusmdd tempor </p>
+          <span class="author"><a href="#" class="author__name">By Bob</a></span>
+        </div></span>
+         <span class="time"><label class="container">
+        <input type="checkbox" checked="checked">
+        <span class="checkmark"></span>
+        </label>
+        </span>
+        <div class="author__info">
+          <p class="detail">Lorem ipsum dolor sit amit </p>
+          <span class="author"><a href="#" class="author__name">By Sean</a></span>
+        </div>
+        <span class="time"><label class="container">
+        <input type="checkbox" checked="checked">
+        <span class="checkmark"></span>
+        </label>
+        </span>
+        <div class="author__info">
+          <p class="detail">Lorem ipsum dolor sit amit eiusmdd tempor  </p>
+          <span class="author"><a href="#" class="author__name">By James</a></span>
+        </div>
+        <span class="time"><label class="container">
+        <input type="checkbox" checked="checked">
+        <span class="checkmark"></span>
+        </label>
+        </span>
+        <div class="author__info">
+          <p class="detail">Lorem ipsum dolor </p>
+          <span class="author"><a href="#" class="author__name">By James</a></span>
+        </div>
+         <span class="time"><label class="container">
+        <input type="checkbox" checked="checked">
+        <span class="checkmark"></span>
+        </label>
+        </span>
+        <div class="author__info">
+          <p class="detail">Lorem ipsum dolor sit amit,consectetur eiusmdd  </p>
+          <span class="author"><a href="#" class="author__name">By Derrick</a></span>
+        </div>
+         <span class="time"><label class="container">
+        <input type="checkbox" checked="checked">
+        <span class="checkmark"></span>
+        </label>
+        </span>
+        <div class="author__info">
+          <p class="detail">Lorem ipsum dolor sit amit,consectetur  </p>
+          <span class="author"><a href="#" class="author__name">By Iman</a></span>
+        </div>
+        <span class="time"><label class="container">
+        <input type="checkbox" checked="checked">
+        <span class="checkmark"></span>
+        </label>
+        </span>
+        <div class="author__info">
+          <p class="detail">Lorem ipsum dolor sit consectetur eiusmdd tempor  </p>
+          <span class="author"><a href="#" class="author__name">By Aziko</a></span>
+        </div>
+      </div>
+    </section>
   </main>
   <script src="assets/main.js"></script>
        
