--- a/final project 3/index.html
+++ b/final project 3/index.html
@@ -536,9 +536,10 @@
         </label>
         </span>
         <div class="author__info"><span>
-          <p class="detail">Lorem ipsum dolor sit amit,consectetur              eiusmdd tempor </p>
+          <p class="detail">Lorem ipsum dolor sit amit,consectetur eiusmdd tempor </p>
           <span class="author"><a href="#" class="author__name">By Bob</a></span>
-        </div></span>
+        </div>
+        </span>
          <span class="time"><label class="container">
         <input type="checkbox" checked="checked">
         <span class="checkmark"></span>
