some changes in section first

--- a/final project 3/index.html
+++ b/final project 3/index.html
@@ -272,26 +272,26 @@
           <div class="trends_chart"></div>
           <div class="widget">
             <img src="assets/media/logo1.png" class="widget_logo">
-            <p class="widget_info">
-              <span class="widget_title">Python</span>
+            <div class="widget_info">
+              <p class="widget_title">Python</p>
               <span class="widget_sub_info">A Programming Language</span>
-            </p>
+            </div>
             <span class="widget_number">+$17</span>
           </div>
           <div class="widget">
             <img src="assets/media/logo2.png" class="widget_logo">
-            <p class="widget_info">
-              <span class="widget_title">FlyThemes</span>
+            <div class="widget_info">
+              <p class="widget_title">FlyThemes</p>
               <span class="widget_sub_info">A Let's Fast Again Language</span>
-            </p>
+            </div>
             <span class="widget_number">+$300</span>
           </div>
           <div class="widget">
             <img src="assets/media/logo3.png" class="widget_logo">
-            <p class="widget_info">
-              <span class="widget_title">AirApp</span>
+            <div class="widget_info">
+              <p class="widget_title">AirApp</p>
               <span class="widget_sub_info">Awesome App For Project Management</span>
-            </p>
+            </div>
             <span class="widget_number">+$6700</span>
           </div>
         </div>
@@ -307,29 +307,29 @@
             </div>
           </div>
           <div class="activity-cards">
-              <div>
-                  <i class="fas fa-truck"></i>
-                  <p>Delivered</p>
-                  <span>15 New</span>
-                  <p>Paskages</p>
-                </div>
-                <div>
-                  <i class="fas fa-chart-pie"></i>
-                  <p>Ordered</p>
-                  <span>72 New items</span>
-                </div>
-                <div>
-                  <i class="far fa-paper-plane"></i>
-                  <p>Reporeted</p>
-                  <span>72 Support</span>
-                  <p>Cases</p>
-                </div>
-                <div>
-                  <i class="fas fa-clock"></i>
-                  <p>Arrived</p>
-                  <span>34 Upgraded</span>
-                  <p>Boxes</p>
-                </div>
+            <div class="activity-card">
+              <i class="fas fa-truck activity-logo"></i>
+              <p class="act-card-title">Delivered</p>
+              <span>15 New</span>
+              <p>Paskages</p>
+            </div>
+            <div class="activity-card">
+              <i class="fas fa-chart-pie activity-logo"></i>
+              <p class="act-card-title">Ordered</p>
+              <span>72 New items</span>
+            </div>
+            <div class="activity-card">
+              <i class="far fa-paper-plane activity-logo"></i>
+              <p class="act-card-title">Reporeted</p>
+              <span>72 Support</span>
+              <p>Cases</p>
+            </div>
+            <div class="activity-card">
+              <i class="fas fa-clock activity-logo"></i>
+              <p class="act-card-title">Arrived</p>
+              <span>34 Upgraded</span>
+              <p>Boxes</p>
+            </div>
           </div>
         </div>
         <!-- end activity -->
@@ -337,9 +337,10 @@
         <div class="box blog">
           <div class="blog-img-area">
             <img src="assets/media/blog1.jpg" class="blog-img">
+            <span class="blog-nav">Blog</span>
+            <p class="blog-title">Introducing New Feature</p>
           </div>
-          <p><span class="blog-nav">Blog</span></p>
-          <p class="blog-title">Introducing New Feature</p>
+          
           <div class="blog-disc">
             <div>
               <img src="" alt="Anna Krox">
