--- a/final project 3/index.html
+++ b/final project 3/index.html
@@ -371,28 +371,28 @@
       <div class="grid2 col-1-1-1">
         <!-- start profit-amount box area -->
         <div class="box">
-          <div class="widget">
-            <p class="widget_info">
-              <p class="widget_title">Member Profit</p>
+          <div class="profit-widget widget">
+            <div class="widget_info">
+              <p class="widget_profit_title">Member Profit</p>
               <p class="widget_sub_info">Awerage weekly profit</p>
-              <p>Profit</p>
-            </p>
+              <p class="widget_sub_info">Profit</p>
+            </div>
             <p class="widget_number">+$17,800</p>
           </div>
-          <div class="widget">
-            <p class="widget_info">
-              <p class="widget_title">Orders</p>
+          <div class="profit-widget widget">
+            <div class="widget_info">
+              <p class="widget_profit_title">Orders</p>
               <p class="widget_sub_info">Weekly Customer</p>
-              <p>Orders</p>
-            </p>
+              <p class="widget_sub_info">Orders</p>
+            </div>
             <p class="widget_number">+1,800</p>
           </div>
-          <div class="widget">
-            <p class="widget_info">
-              <p class="widget_title">Issue Reports</p>
+          <div class="profit-widget widget">
+            <div class="widget_info">
+              <p class="widget_profit_title">Issue Reports</p>
               <p class="widget_sub_info">System Bugs and</p>
-              <p>issues</p>
-            </p>
+              <p class="widget_sub_info">issues</p>
+            </div>
             <p class="widget_number">-27,49%</p>
           </div>
         </div>
