--- a/final project 3/index.html
+++ b/final project 3/index.html
@@ -565,24 +565,21 @@
         </section>
       </section>
     </section>
-<<<<<<< HEAD
     <!-- Task -->
     <section class="task">
       <div class="task-head">
         <div class="task_heading">
           <p class="title">Tasks</p>
-        </div>
-        <div class="task_heading_tools">
-          <ul class="navigation">
+          <ul class="navigation_task">
             <li class="nav_item"> <a href="#"><button>Today</button></a> </li>
             <li class="nav_item"> <a href="#"> Week </a> </li>
             <li class="nav_item"> <a href="#"> Month </a> </li>
           </ul>
-        </div>
+        </div> <hr>
       </div>
-      <div class="list_items">
-        <span class="time-task"><label class="container">
-        <input type="checkbox" checked="checked">
+      <div class="task_items">
+        <span class="timeA"><label class="container">
+        <input type="checkbox">
         <span class="checkmark"></span>
         </label>
         </span>
@@ -591,8 +588,8 @@
           <span class="author"><a href="#" class="author__name">By Bob</a></span>
         </div>
         </span>
-         <span class="time"><label class="container">
-        <input type="checkbox" checked="checked">
+         <span class="timeA"><label class="container">
+        <input type="checkbox">
         <span class="checkmark"></span>
         </label>
         </span>
@@ -600,8 +597,8 @@
           <p class="detail">Lorem ipsum dolor sit amit </p>
           <span class="author"><a href="#" class="author__name">By Sean</a></span>
         </div>
-        <span class="time"><label class="container">
-        <input type="checkbox" checked="checked">
+        <span class="timeA time11"><label class="container">
+        <input type="checkbox">
         <span class="checkmark"></span>
         </label>
         </span>
@@ -609,8 +606,8 @@
           <p class="detail">Lorem ipsum dolor sit amit eiusmdd tempor  </p>
           <span class="author"><a href="#" class="author__name">By James</a></span>
         </div>
-        <span class="time"><label class="container">
-        <input type="checkbox" checked="checked">
+        <span class="timeA time22"><label class="container">
+        <input type="checkbox">
         <span class="checkmark"></span>
         </label>
         </span>
@@ -618,8 +615,8 @@
           <p class="detail">Lorem ipsum dolor </p>
           <span class="author"><a href="#" class="author__name">By James</a></span>
         </div>
-         <span class="time"><label class="container">
-        <input type="checkbox" checked="checked">
+         <span class="timeA time33"><label class="container">
+        <input type="checkbox">
         <span class="checkmark"></span>
         </label>
         </span>
@@ -627,8 +624,8 @@
           <p class="detail">Lorem ipsum dolor sit amit,consectetur eiusmdd  </p>
           <span class="author"><a href="#" class="author__name">By Derrick</a></span>
         </div>
-         <span class="time"><label class="container">
-        <input type="checkbox" checked="checked">
+         <span class="timeA time44"><label class="container">
+        <input type="checkbox">
         <span class="checkmark"></span>
         </label>
         </span>
@@ -636,8 +633,8 @@
           <p class="detail">Lorem ipsum dolor sit amit,consectetur  </p>
           <span class="author"><a href="#" class="author__name">By Iman</a></span>
         </div>
-        <span class="time"><label class="container">
-        <input type="checkbox" checked="checked">
+        <span class="timeA time55"><label class="container">
+        <input type="checkbox">
         <span class="checkmark"></span>
         </label>
         </span>
@@ -647,9 +644,7 @@
         </div>
       </div>
     </section>
-=======
-    
->>>>>>> f96356d00b0ef2fefb4dfb02963ad0536990a505
+
   </main>
   <script src="assets/main.js"></script>
        
