--- a/final project 3/index.html
+++ b/final project 3/index.html
@@ -436,8 +436,8 @@
         <div class="box personal_income">
           <div class="personal_income_hero">
             <p class="personal_income_header">
-              <span>Personal Income</span>
-              <button>
+              <span class="personal_income_title">Personal Income</span>
+              <button class="personal_income_btn">
                 <span>2018</span>
                 <span><i class="fas fa-angle-down"></i></span>
               </button>
